    c} or @{type_name c} here instead of the above syntax
    antiquotations.

Note that old non-authentic syntax was based on unqualified base
names, so all of the above "constant" names would coincide.  Recall
that 'print_syntax' and ML_command "set Syntax.trace_ast" help to
diagnose syntax problems.

* Type constructors admit general mixfix syntax, not just infix.


*** Pure ***

* Code generator: details of internal data cache have no impact on
the user space functionality any longer.

* Discontinued unnamed infix syntax (legacy feature for many years) --
need to specify constant name and syntax separately.  Internal ML
datatype constructors have been renamed from InfixName to Infix etc.
Minor INCOMPATIBILITY.

* Commands 'type_notation' and 'no_type_notation' declare type syntax
within a local theory context, with explicit checking of the
constructors involved (in contrast to the raw 'syntax' versions).


*** HOL ***

* Theory "Rational" renamed to "Rat", for consistency with "Nat", "Int" etc.
INCOMPATIBILITY.

* New set of rules "ac_simps" provides combined assoc / commute rewrites
for all interpretations of the appropriate generic locales.

* Renamed theory "OrderedGroup" to "Groups" and split theory "Ring_and_Field"
into theories "Rings" and "Fields";  for more appropriate and more
consistent names suitable for name prefixes within the HOL theories.
INCOMPATIBILITY.

* Some generic constants have been put to appropriate theories:

    less_eq, less: Orderings
    zero, one, plus, minus, uminus, times, abs, sgn: Groups
    inverse, divide: Rings

INCOMPATIBILITY.

* Class division ring also requires proof of fact divide_inverse.  However instantiation
of parameter divide has also been required previously.  INCOMPATIBILITY.

* More consistent naming of type classes involving orderings (and lattices):

    lower_semilattice                   ~> semilattice_inf
    upper_semilattice                   ~> semilattice_sup
